# rum-rs

./: Cargo.toml  test  test.sh
samples/: uuid
src/: choose.rs  component.rs  confirm.rs  main.rs  spinner.rs  text.rs  typer.rs
