[package]
name = "rum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
crossterm = "0.28.1"
enum_dispatch = "0.3.13"
lru = "0.13.0"
unicode-segmentation = "1.10.1"
